test/analyzer/input_programs/invalid_programs/program09.tea
a := 'original value'

# Invalid since you cannot declare a variable
# to be the value of an assignment expression.
# That's just uncool man!
b := a = 'new value'